--- a/public/css/app.min.1.css
+++ b/public/css/app.min.1.css
@@ -15031,7 +15031,7 @@ a.thumbnail.active {
   border-radius: 2px;
   width: 500px;
   display: inline-block;
-  margin-top: 42px;
+  margin-top: 186px;
   vertical-align: middle;
   position: relative;
 }
@@ -16300,3 +16300,4 @@ body.login-content:before {
   padding-left: 5px;
   padding-right: 5px;
 }
+.table td img{max-height: 60px !important;}
